--- a/engine/skins/billing/styles.css
+++ b/engine/skins/billing/styles.css
@@ -141,6 +141,11 @@ p.bt_catalog_desc
     cursor: pointer;
 }
 
+.pagination_div {
+    margin:7px;
+    vertical-align: middle
+}
+
 .pagination {
     display:inline-block;
     padding-left:0;
